--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,3 @@
 spring.application.name=backend
+
+mongodb+srv://sashinisithara20:qpweW6D6lvGf3EOp@cluster0.p8qchhr.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
