--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,12 +13,10 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.4.1",
-    "react-scripts": "5.0.1",
-    "vite": "^6.2.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "vite",
     "dev": "vite",
     "build": "vite build",
     "test": "react-scripts test",
@@ -41,5 +39,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@vitejs/plugin-react": "^4.3.4",
+    "vite": "^6.2.5"
   }
 }
